--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,3 +17,10 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+
+  assets:
+    - assets/images/130.jpg
+    - assets/images/doctor.jpg
+    - assets/images/shape.jpg
+    - assets/images/Illustration.jpg
