--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,3 +24,6 @@ flutter:
     - assets/images/doctor.jpg
     - assets/images/shape.jpg
     - assets/images/Illustration.jpg
+    - assets/images/Hello.jpg
+    - assets/images/Back.jpg
+    - assets/images/del.jpg
